--- a/html/top10.html
+++ b/html/top10.html
@@ -43,7 +43,7 @@
             % for row in data:
                 <tr class="bg-primary">
                 % for k,v in row.items():
-                    <td class=k>${v}</td>
+                    <td class=${k}>${v}</td>
                 % endfor
                 </tr>
             % endfor
